@@ -21,13 +21,13 @@ examples for writing programs to display and save TIFF images.
 <table border cellpadding="3">
 <tr>
 <td valign="top" width="10%">
-<tt>tiffgt&nbsp;&nbsp;&nbsp;&nbsp;</tt></td>
+<tt><a href="man/tiffgt.1.html">tiffgt</a>&nbsp;&nbsp;&nbsp;&nbsp;</tt></td>
 <td>Display the contents of one or more TIFF images using OpenGL.
 The software makes extensive use of the <tt>TIFFRGBAImage</tt>
 facilities described elsewhere.</td>
 </tr>
 <tr>
-<td valign="top" width="10%"><tt>tiffsv</tt></td>
+<td valign="top" width="10%"><tt><a href="man/tiffsv.1.html">tiffsv</a></tt></td>
 <td>A program to save all or part of a screen dump on a Silicon
 Graphics system. As for <tt>tiffgt</tt> this code, while written to
 use the IRIS GL, can be easily tailored to other devices.</td>
@@ -37,112 +37,121 @@ use the IRIS GL, can be easily tailored to other devices.</td>
 The remaining programs should be device-independent:
 <table border cellpadding="3">
 <tr>
-<td valign="top" width="10%"><tt>bmp2tiff</tt></td>
+<td valign="top" width="10%"><tt><a href="man/bmp2tiff.1.html">bmp2tiff</a></tt></td>
 <td>Convert BMP images to TIFF</td>
 </tr>
 <tr>
-<td valign="top" width="10%"><tt>fax2ps</tt></td>
+<td valign="top" width="10%"><tt><a href="man/fax2ps.1.html">fax2ps</a></tt></td>
 <td>Convert a Group 3- or Group 4- compressed TIFF to PostScript
 that is significantly more compressed than is generated by
 <tt>tiff2ps</tt> (unless <tt>tiff2ps</tt> writes PS Level II)</td>
 </tr>
 <tr>
-<td valign="top" width="10%"><tt>fax2tiff</tt></td>
+<td valign="top" width="10%"><tt><a href="man/fax2tiff.1.html">fax2tiff</a></tt></td>
 <td>Convert raw Group 3 or Group 4 facsimile data to TIFF</td>
 </tr>
 <tr>
-<td valign="top" width="10%"><tt>gif2tiff</tt></td>
-<td>A quick hack that converts GIF 87a format images to TIFF</td>
+<td valign="top" width="10%"><tt><a href="man/gif2tiff.1.html">gif2tiff</a></tt></td>
+<td>A quick hack that converts GIF 87a (old) format images to TIFF</td>
 </tr>
 <tr>
-<td valign="top" width="10%"><tt>pal2rgb</tt></td>
+<td valign="top" width="10%"><tt><a href="man/pal2rgb.1.html">pal2rgb</a></tt></td>
 <td>Convert a Palette-style image to a full color RGB image by
 applying the colormap</td>
 </tr>
 <tr>
-<td valign="top" width="10%"><tt>ppm2tiff</tt></td>
-<td>A quick hack that converts PPM format images to TIFF</td>
+<td valign="top" width="10%"><tt><a href="man/ppm2tiff.1.html">ppm2tiff</a></tt></td>
+<td>A quick hack that converts 8-bit PPM format images to TIFF</td>
 </tr>
 <tr>
-<td valign="top" width="10%"><tt>ras2tiff</tt></td>
+<td valign="top" width="10%"><tt><a href="man/ras2tiff.1.html">ras2tiff</a></tt></td>
 <td>A quick hack that converts Sun rasterfile format images to TIFF
 -- it's less than complete</td>
 </tr>
 <tr>
-<td valign="top" width="10%"><tt>raw2tiff</tt></td>
+<td valign="top" width="10%"><tt><a href="man/raw2tiff.1.html">raw2tiff</a></tt></td>
 <td>Create a TIFF file from raw data</td>
 </tr>
 <tr>
-<td valign="top" width="10%"><tt>rgb2ycbcr</tt></td>
+<td valign="top" width="10%"><tt><a href="man/rgb2ycbcr.1.html">rgb2ycbcr</a></tt></td>
 <td>Convert an RGB, grayscale, or bilevel TIFF image to a YCbCr
 TIFF image; it's mainly provided for testing</td>
 </tr>
 <tr>
-<td valign="top" width="10%"><tt>sgi2tiff</tt></td>
+<td valign="top" width="10%"><tt><a href="man/sgi2tiff.1.html">sgi2tiff</a></tt></td>
 <td>A program to convert SGI image files to TIFF. This program is
 only useful on SGI machines as it uses <tt>-limage</tt>.</td>
 </tr>
 <tr>
-<td valign="top" width="10%"><tt>thumbnail</tt></td>
+<td valign="top" width="10%"><tt><a href="man/thumbnail.1.html">thumbnail</a></tt></tt></td>
 <td>Copy a bilevel TIFF to one that includes 8-bit greyscale
 "thumbnail images" for each page; it is provided as an example of
 how one might use the <tt>SubIFD</tt> tag (and the library support
 for it)</td>
 </tr>
 <tr>
-<td valign="top" width="10%"><tt>tiff2bw</tt></td>
+<td valign="top" width="10%"><tt><a href="man/tiff2bw.1.html">tiff2bw</a></tt></td>
 <td>A simple program to convert a color image to grayscale</td>
 </tr>
 <tr>
-<td valign="top" width="10%"><tt>tiff2pdf</tt></td>
+<td valign="top" width="10%"><tt><a href="man/tiff2pdf.1.html">tiff2pdf</a></tt></td>
 <td>Convert TIFF images to PDF</td>
 </tr>
 <tr>
-<td valign="top" width="10%"><tt>tiff2ps</tt></td>
+<td valign="top" width="10%"><tt><a href="man/tiff2ps.1.html">tiff2ps</a></tt></td>
 <td>Convert TIFF images to PostScript</td>
 </tr>
 <tr>
-<td valign="top" width="10%"><tt>tiff2rgba</tt></td>
+<td valign="top" width="10%"><tt><a href="man/tiff2rgba.1.html">tiff2rgba</a></tt></td>
 <td>Convert a TIFF image to RGBA color space</td>
 </tr>
 <tr>
-<td valign="top" width="10%"><tt>tiffcmp</tt></td>
+<td valign="top" width="10%"><tt><a href="man/tiffcmp.1.html">tiffcmp</a></tt></td>
 <td>Compare the contents of two TIFF files (it does not check all
 the directory information, but does check all the data)</td>
 </tr>
 <tr>
-<td valign="top" width="10%"><tt>tiffcp</tt></td>
+<td valign="top" width="10%"><tt><a href="man/tiffcp.1.html">tiffcp</a></tt></td>
 <td>Copy, concatenate, and convert TIFF images (e.g. switching from
 Compression=5 to Compression=1)</td>
 </tr>
 <tr>
-<td valign="top" width="10%"><tt>tiffdither</tt></td>
+<td valign="top" width="10%"><tt><a href="man/tiffcrop.1.html">tiffcrop</a></tt></td>
+<td>Provides selection of images from within one or more multi-image
+TIFF files, with orthogonal rotation, mirroring, cropping, and
+extraction of multiple sections and exporting to one or more files.
+It extends the functionality of tiffcp to support additional bit
+depths in strips and tiles and enhances the selection capabilities of
+tiffsplit. Bilevel images can be inverted and images may be split into
+segments to fit on multiple /pages/ (standard paper sizes), plus other
+functions described in the tiffcrop man page</td>
+</tr>
+<tr>
+<td valign="top" width="10%"><tt><a href="man/tiffdither.1.html">tiffdither</a></tt></td>
 <td>Dither a b&amp;w image into a bilevel image (suitable for use
 in creating fax files)</td>
 </tr>
 <tr>
-<td valign="top" width="10%"><tt>tiffdump</tt></td>
+<td valign="top" width="10%"><tt><a href="man/tiffdump.1.html">tiffdump</a></tt></td>
 <td>Display the verbatim contents of the TIFF directory in a file
 (it's very useful for debugging bogus files that you may get from
 someone that claims they support TIFF)</td>
 </tr>
 <tr>
-<td valign="top" width="10%"><tt>tiffinfo</tt></td>
+<td valign="top" width="10%"><tt><a href="man/tiffinfo.1.html">tiffinfo</a></tt></td>
 <td>Display information about one or more TIFF files.</td>
 </tr>
 <tr>
-<td valign="top" width="10%"><tt>tiffmedian</tt></td>
+<td valign="top" width="10%"><tt><a href="man/tiffmedian.1.html">tiffmedian</a></tt></td>
 <td>A version of Paul Heckbert's median cut program that reads an
-RGB TIFF image, and creates a TIFF palette file as a result; it's
-useful for converting full-color RGB images to 8-bit color for your
-friends that have cheapo 8-bit framebuffers.</td>
+RGB TIFF image, and creates a TIFF palette file as a result</td>
 </tr>
 <tr>
-<td valign="top" width="10%"><tt>tiffset</tt></td>
+<td valign="top" width="10%"><tt><a href="man/tiffset.1.html">tiffset</a></tt></td>
 <td>Set a field in a TIFF header</td>
 </tr>
 <tr>
-<td valign="top" width="10%"><tt>tiffsplit</tt></td>
+<td valign="top" width="10%"><tt><a href="man/tiffsplit.1.html">tiffsplit</a></tt></td>
 <td>Create one or more single-image files from a (possibly)
 multi-image file</td>
 </tr>
